--- a/source/standards/incident-management.html.md.erb
+++ b/source/standards/incident-management.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to manage technical incidents
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -8,7 +8,7 @@ review_in: 6 months
 
 MHCLG incident management focuses on restoring normal operations quickly with minimal impact on users.
 
-Technical incidents may also be cyber security or data loss incidents. You must report all suspected or actual cyber security incidents to the COD Cyber Security team and to the MHCLG Information Security team. You must report all actual or suspected data breach incidents to the MHCLG Information Management team. These requirements should be included in your service manual/guides/processes. Check the MHCLG Wiki for current contact details.
+Technical incidents may also be cyber security or data loss incidents. You must report all suspected or actual cyber security incidents to the Cyber Security team. You must report all actual or suspected data breach incidents to the MHCLG Knowledge and Information Management team. These requirements should be included in your service manual/guides/processes. Check the MHCLG Intranet for current contact details.
 
 ## Define incident priority
 
@@ -24,7 +24,9 @@ Define technical incident priority levels for your service’s applications. For
 
 Assign a priority level to incidents based on their complexity, urgency and resolution time. Incident severity also determines response times and support level.
 
-### Incident priority table
+### Example incident priority table
+
+Your team should define suitable incident classifications and response times depending on the requirements of the service, for example:
 
 |Classification|Type|Example|Response time|Update frequency|
 |---|---|---|---|---|
@@ -39,7 +41,7 @@ Your team must understand what to do during an incident. Develop and document yo
 
 ### Example workflow
 
-Follow a prepared workflow to manage an incident to minimise its impact on your team and service users. Make sure that every step of the way is documented in writing using the [incident report template][incident-report-template] [^1].
+Follow a prepared workflow to manage an incident to minimise its impact on your team and service users. Make sure that every step of the way is documented in writing.
 
 1. [Establish an incident lead](#1-establish-an-incident-lead).
 1. [Inform your team](#2-inform-your-team).
@@ -58,11 +60,11 @@ Establish who your incident lead is. Find out who noticed the problem and if any
 
 #### 2. Inform your team
 
-Inform your team using your chosen tool, like [Slack](https://gds.slack.com). If the incident involves a data or security breach, notify the relevant team(s) who’ll help you manage the incident. You can use the [#cyber-security-help Slack channel](https://gds.slack.com/messages/CCMPJKFDK/) to contact COD Cyber.
+Inform your team using your chosen tool, like [Slack](https://communities-govuk.slack.com). If the incident involves a data or security breach, notify the relevant team(s) who’ll help you manage the incident.
 
 #### 3. Prioritise the incident
 
-Prioritise the incident and start tracking actions, updates and communications. Teams like [GOV.UK PaaS](https://www.cloud.service.gov.uk/) and [Notify](https://www.notifications.service.gov.uk/) do this by creating a new incident report - copied from the [incident report template][incident-report-template] - and use it to track updates and progress.
+Prioritise the incident and start tracking actions, updates and communications. Create a shared incident report document and use it to track updates and progress.
 
 ####  4. Form an incident response team
 
@@ -122,6 +124,8 @@ You should:
 
 #### 9. Communicate to a wider audience
 
+All incidents should be reported using [MHCLG’s incident report form](https://forms.office.com/pages/responsepage.aspx?id=EGg0v32c3kOociSi7zmVqPQjesbluidIt1j_Iq0aCzdUREVMOVc0WUFXWFJUVjJONTY0WTFEVEJBTS4u&route=shorturl).
+
 If the incident is serious (P1 or P2) you’ll need to contact a wider MHCLG audience and potentially your service users.
 
 Your communications lead must manage:
@@ -133,44 +137,16 @@ Your communications lead must manage:
 
 Make sure internal and external parties, like Information Assurance (IA) or your service users are fully informed at every stage of your incident management process.
 
-For example, teams including [GOV.UK Platform as a Service (PaaS)](https://status.cloud.service.gov.uk/), [GOV.UK Notify](https://www.notifications.service.gov.uk/) and [GOV.UK Pay](https://www.payments.service.gov.uk/) use the [StatusPage service](https://www.atlassian.com/software/statuspage) to trigger notifications to subscribed users.
-
-Post regular updates to the status of an incident in the [#incident Slack channel](https://gds.slack.com/messages/CAD6S2B9Q). This helps people across MHCLG without having to find and follow multiple notification mechanisms for the different programmes.
-
 **Incident escalations**
 
-Notify escalation contacts of all high priority incidents (P1/P2). [Support Operations](https://gds.slack.com/messages/CADFJBDQU/details/#) can help you decide your service’s escalation route and associated contact details.
+Notify escalation contacts of all high priority incidents (P1/P2).
 
 **Report cyber security incidents**
 
-The incident lead, guided by the Information Security team, must inform the National Cyber Security Centre (NCSC) of any category 1, 2 or 3 incidents. The NCSC defines security incidents in its [categorisation system prioritisation framework](https://www.ncsc.gov.uk/news/new-cyber-attack-categorisation-system-improve-uk-response-incidents). 
+The incident lead, guided by the Cyber Security team, must inform the National Cyber Security Centre (NCSC) of any category 1, 2 or 3 incidents. The NCSC defines security incidents in its [categorisation system prioritisation framework](https://www.ncsc.gov.uk/news/new-cyber-attack-categorisation-system-improve-uk-response-incidents).
 
 Depending on the incident, the NCSC may be able to provide technical support. 
 
 #### 10. Resolve the incident
 
-Hold an incident and lesson learned review following a [blameless post mortem culture](https://codeascraft.com/2012/05/22/blameless-postmortems/) so your service can improve. Add a row to the central [MHCLG incidents summary spreadsheet](https://docs.google.com/spreadsheets/d/1TmKiIAUr6EH1XZa5MJquSyHGZnQBjrORUJjs6l4TwHU) linking to your incident report document.
-
-## Example incident management
-
-Read the GOV.UK PaaS and Digital Marketplace incident management processes (note that the Digital Marketplace is now run by the Crown Commercial Service, but the incident management guideance was created when it was part of MHCLG/CDIO):
-
-- GOV.UK PaaS [incident management process](https://team-manual.cloud.service.gov.uk/incident_management/incident_process/)
-- Digital Marketplace [incident response manual](https://alphagov.github.io/digitalmarketplace-manual/2nd-line-runbook/incidents.html)
-
-## Further reading
-
-Read the [MHCLG Technical Incident Management Framework and Process](https://docs.google.com/document/d/1jfdS6cmxYe7AmM50BSDYU0i6MdaVlOomuacwer70_rc/edit) document for more information. For example, you can read more about:
-
-- classifying incidents
-- routes to support
-- incident workflows - from request to resolution
-- roles in the Incident Team for P1 and P2
-
-## Contact Support Operations
-
-Contact the Support Operations team using the [#user-support Slack channel](https://gds.slack.com/messages/CADFJBDQU/details/#).
-
-[^1]: Note that this document can only be accessed by people within MHCLG.
-
-[incident-report-template]: https://docs.google.com/document/d/1YDA13RU6wicXoKgDv5VucJe3o_Z0k_Qhug9EJC_XdSE/
+Hold an incident and lesson learned review following a [blameless post mortem culture](https://codeascraft.com/2012/05/22/blameless-postmortems/) so your service can improve.
