Update continuous delivery

--- a/source/standards/continuous-delivery.html.md.erb
+++ b/source/standards/continuous-delivery.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Use continuous delivery
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 12 months
 ---
 
@@ -38,7 +38,7 @@ To achieve continuous delivery you need:
 
 ### Frequent integration to the main branch
 
-We generally use [Pull Requests][] for our development processes.
+We generally use [Pull Requests][] for our development processes, although some teams do [Trunk Based Development][].
 Long-lived branches mean a longer wait time to see changes in production, and a greater risk of merge conflicts.
 You should aim to have small Pull Requests, so that they are easier to review and can be merged more quickly.
 You should aim for your feature branches to live for only a day or two before getting merged.
