--- a/source/manuals/release-notes.html.md.erb
+++ b/source/manuals/release-notes.html.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Writing release notes
-last_reviewed_on: 2000-01-01
-review_in: 6 months
+last_reviewed_on: 2025-07-28
+review_in: 12 months
 ---
 
 # <%= current_page.data.title %>
@@ -71,6 +71,10 @@ Lead into a code example with either:
     ```
     <div data-module="assets-section">
     ```
+
+## Representing changes in API documentation
+
+If you maintain a documentation website for your API-based service, you should also represent changes/ new versions in this documentation, including documentation for how your users can e.g. safely migrate between versions without breaking their integrations.
 
 ## Guidance outside MHCLG
 
