levellingup->communities, fix digital front door intranet URL

--- a/source/standards/naming-software-products.html.md.erb
+++ b/source/standards/naming-software-products.html.md.erb
@@ -18,13 +18,13 @@ These MHCLG product names clearly communicate their purpose:
 
 - [Find an energy certificate](https://www.gov.uk/find-energy-certificate)
 - [Register to vote](https://www.gov.uk/register-to-vote)
-- [Submit social housing lettings and sales data](https://submit-social-housing-data.levellingup.gov.uk/)
+- [Submit social housing lettings and sales data](https://submit-social-housing-data.communities.gov.uk/)
 
 These MHCLG product names are ambiguous and possibly confusing:
 
 - [Delta](https://delta.communities.gov.uk)
 - [E-CLAIMS](https://eclaims.communities.gov.uk/esif-web/login)
-- [Atlas](https://atlas.levellingup.gov.uk/)
+- [Atlas](https://atlas.communities.gov.uk/)
 
 
 ## Further reading
