--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -70,7 +70,7 @@ You can also read the service manual to find out about
 [learning about and writing user needs](https://www.gov.uk/service-manual/user-research/start-by-learning-user-needs).
 
 You can also read the MHCLG intranet to find out about
-[writing useful and inclusive content for your users] (https://intranet.levellingup.gov.uk/task/content-design-guidance/).
+[writing useful and inclusive content for your users] (https://intranet.communities.gov.uk/task/content-design-guidance/).
 
 Thank you for your contributions as we develop this repository.
 
