--- a/source/manuals/accessibility.html.md.erb
+++ b/source/manuals/accessibility.html.md.erb
@@ -18,7 +18,7 @@ Further reading:
 - [legal accessibility requirements for government services](https://www.gov.uk/guidance/accessibility-requirements-for-public-sector-websites-and-apps)
 - [the equality act](https://www.gov.uk/guidance/equality-act-2010-guidance)
 - [understanding WCAG 2.2](https://www.gov.uk/service-manual/helping-people-to-use-your-service/understanding-wcag)
-- [accessibility checklist for your web content] (https://intranet.levellingup.gov.uk/task/content-design-guidance/accessibility/#chapter_head)
+- [accessibility checklist for your web content] (https://intranet.communities.gov.uk/task/content-design-guidance/accessibility/#chapter_head)
 
 ## How to make your service accessible
 
@@ -84,7 +84,7 @@ Testing with real users can be a time consuming process. It is recommended that 
 
 You can use a contract with the [Digital Accessibility Centre](https://www.digitalaccessibilitycentre.org/) to test and audit your service for accessibility.
 
-Contact the [Digital Front Door team](https://intranet.levellingup.gov.uk/task/digital-and-web-publishing-services/) to use this contract.
+Contact the [Digital Front Door team](https://intranet.communities.gov.uk/task/find-teams/corporate/digital/digital-front-door/) to use this contract.
 
 ### Use the GOV.UK Design System
 
