--- a/source/accessibility.html.md.erb
+++ b/source/accessibility.html.md.erb
@@ -1,13 +1,13 @@
 ---
 title: Accessibility statement for the MHCLG Way
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 hide_in_navigation: true
 ---
 
 # Accessibility
 
-This accessibility statement applies to the MHCLG Way at <https://friendly-parakeet-63jl6v6.pages.github.io/>.
+This accessibility statement applies to the [MHCLG Way](/).
 
 This website is run by the MHCLG Way team at the Ministry of Housing, Communities & Local Government (MHCLG). We want
 as many people as possible to be able to use this website. For example, that means you should be able to:
@@ -30,15 +30,9 @@ We’re committed to making this website accessible, in accordance with the Publ
 
 This website is fully compliant with the [Web Content Accessibility Guidelines version 2.1](https://www.w3.org/TR/WCAG21/) AA standard.
 
-### Feedback and contact information
-
-If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, contact [TODO_FIND_RIGHT_PERSON@communities.gov.uk](mailto:TODO_FIND_RIGHT_PERSON@communities.gov.uk) with details of your request.
-
-We’ll aim to reply within 3 working days.
-
 ### Reporting accessibility problems with this website
 
-We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email [TODO_FIND_RIGHT_PERSON@communities.gov.uk](mailto:TODO_FIND_RIGHT_PERSON@communities.gov.uk).
+We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, email [mhclg.digital-serivces@communities.gov.uk](mailto:mhclg.digital-serivces@communities.gov.uk).
 
 ### Enforcement procedure
 
@@ -46,6 +40,6 @@ The Equality and Human Rights Commission (EHRC) is responsible for enforcing the
 
 ## Preparation of this accessibility statement
 
-This statement was prepared on 1 September 2020. It was last updated on 6 October 2021.
+This statement was prepared on 1 September 2020. It was last updated on 28 July 2025.
 
 We last tested this website for accessibility issues in March 2021.
