--- a/source/manuals/code-review-guidelines.html.md.erb
+++ b/source/manuals/code-review-guidelines.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to review code
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 9 months
 ---
 
@@ -86,7 +86,7 @@ The Service Manual contains guidance about [deploying software][].
 
 Before you approve a PR, you should consider if it affects any existing documentation. You should make sure the PR's documentation is clear and unambiguous, and in the right place.
 
-If you want to learn more about writing clearly for technical audiences you can contact MHCLG technical writers using the [#gds-technical-writing Slack channel][].
+If you want to learn more about writing clearly for technical audiences you can contact [#technical-writing](https://ukgovernmentdigital.slack.com/archives/C1ZM2T0SG) on UK Government Digital Slack Workspace.
 
 ## Further reading
 
@@ -101,4 +101,3 @@ Find out more about writing and reviewing pull requests on the [Pull requests pa
 [deploying software]: https://www.gov.uk/service-manual/technology/deploying-software-regularly
 [Pull requests page]: /standards/pull-requests.html
 [GitHub Actions]: /standards/source-code/use-github.html#using-github-actions-and-workflows
-[#gds-technical-writing Slack channel]: https://gds.slack.com/archives/CAD0R2NQG
