replace references to mhclg way forum to mhclg way slack channel

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -9,7 +9,7 @@ layout: core
         <ul>
             <li><a href='#about-the-mhclg-way'>About the MHCLG Way</a></li>
             <li><a href='#how-to-add-new-guidance'>How to add new guidance</a></li>
-            <li><a href='#the-mhclg-way-forum'>The MHCLG Way Forum</a></li>
+            <li><a href='#the-mhclg-way-slack-channel'>The MHCLG Way Slack channel</a></li>
         </ul>
     </li>
     <li><a href="#software-development">Software development</a>
@@ -64,7 +64,7 @@ They must be [secure by design](https://www.security.gov.uk/guidance/secure-by-d
 
 ## How to add new guidance
 
-Contribute to this repository by making a pull request in [GitHub](https://github.com/communitiesuk/mhclg-way) for discussion at the MHCLG Way Forum.
+Contribute to this repository by making a pull request in [GitHub](https://github.com/communitiesuk/mhclg-way) for discussion in the MHCLG Way Slack channel (#mhclg-way).
 
 You can also read the service manual to find out about
 [learning about and writing user needs](https://www.gov.uk/service-manual/user-research/start-by-learning-user-needs).
@@ -104,41 +104,6 @@ What specific bits of software (commercial or open source) do
 we use to help us do this thing?
 ```
 
-## The MHCLG Way Forum
+## The MHCLG Way Slack channel
 
-**NOTE: The MHCLG Forum does not exist yet, but we'd like to agree formation of something like this in the Technology
-Community of Practice. What follows is an aspiration for the Forum-to-be**
-
-This site documents some of the decisions agreed at the MHCLG Way Forum about the products we operate.
-
-The MHCLG Forum meets once a month. The Forum is lead developers and technical architects representing MHCLG programmes who are responsible for communicating and implementing the MHCLG Way.
-
-The Forum reviews:
-
-* all MHCLG Way open and closed PRs
-* expired guidance and if it should be continued
-* possible subject areas and ownership of new content
-
-### Contact The MHCLG Way Forum
-
-Contact the MHCLG Way Forum using the [#mhclg-way Slack channel](https://communities-govuk.slack.com/messages/mhclg-way/).
-
-## Software development
-
-<%= partial 'partials/nav-software-development' %>
-
-## Version control and deployments
-
-<%= partial 'partials/nav-version-control-deployments' %>
-
-## Hosting and infrastructure
-
-<%= partial 'partials/nav-hosting-infrastructure' %>
-
-## Logging, monitoring and alerting
-
-<%= partial 'partials/nav-logging-monitoring-alerting' %>
-
-## Operating a service
-
-<%= partial 'partials/nav-operating-a-service' %>
+Use the MHCLG Way Slack channel (#mhclg-way) can be used to raise and discuss existing recommendations and guidance in this living document, and to suggest new topics to cover as the department's technology evolves.
